# eltex-v28-pract

./: README.md
module1/: pract1_2.txt  pract1_3.txt
module1/pract1/: pract1_2.txt  pract1_3.txt
module1/pract2/: pract2_1.txt  pract2_2.txt  pract2_3.txt
module1/pract3/pract3_2/: .cuckoo.sh.swp  .observer.sh.swp  observer.conf  observer.sh  template_task.sh
module2/: pract2_1.txt  pract2_2.txt  pract2_3.txt
module2/pract2/pract2_1/: CMakeLists.txt  main.c  phonebook.c  phonebook.h  tests.c
module2/pract2/pract2_3/: CMakeLists.txt  main.c
module2/pract3/pract3_1/: CMakeLists.txt  main.c
module2/pract3/pract3_2/: CMakeLists.txt  main.c
module2/pract4/pract4_1/: CMakeLists.txt  phonebook.c  phonebook.h  tests.c
module2/pract4/pract4_2/: CMakeLists.txt  main.c  priorityqueue.c  priorityqueue.h  tests.c  tests.h
module2/pract4/pract4_3/: CMakeLists.txt  main.c  phonebook.h  stringlist.c  tests.h
module2/pract6/pract6_1/: CMakeLists.txt  Makefile  main.c  (+1 more)
module2/pract6/pract6_2/: CMakeLists.txt  main.c  makefile
module2/pract6/pract6_2/libs/phonebook/source/: phonebook.c
module2/pract6/pract6_3/: CMakeLists.txt  main.c  makefile
module2/pract6/pract6_3/libs/addition/: addition.c  addition.h  makefile
module2/pract6/pract6_3/libs/division/: division.c  division.h  makefile
module2/pract6/pract6_3/libs/multiplication/: makefile  multiplication.c  multiplication.h
module2/pract6/pract6_3/libs/substraction/: makefile  substraction.c  substraction.h
module3/pract3_2/: .template_task.sh.swp  cuckoo.sh  observer.conf  observer.sh  worker2
(+11 files in other folders)
